# autonomous_exploration_development_environment

src/gazebo_ros/scripts/: spawn_entity.py
src/joystick_drivers/joy/config/: joy-params.yaml
src/loam_interface/: CMakeLists.txt  package.xml
src/loam_interface/launch/: loam_interface.launch
src/loam_interface/src/: loamInterface.cpp
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/launch/: local_planner.launch
src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/segmentation_proc/launch/: segmentation_proc.launch
src/segmentation_proc/scripts/: habitat_online_v0.1.7.py  habitat_online_v0.2.1.py
src/segmentation_proc/src/: segmentationProc.cpp
src/sensor_scan_generation/: CMakeLists.txt  package.xml
src/sensor_scan_generation/launch/: sensor_scan_generation.launch
src/sensor_scan_generation/src/: sensorScanGeneration.cpp
src/terrain_analysis/: CMakeLists.txt  package.xml
src/terrain_analysis/src/: terrainAnalysis.cpp
src/terrain_analysis_ext/: CMakeLists.txt  package.xml
src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/vehicle_simulator/: CMakeLists.txt  package.xml
src/vehicle_simulator/launch/: gmapping.launch  models.launch.py  system.launch  system_campus.launch  system_campus.launch.py  system_forest.launch  system_forest.launch.py  system_garage.launch  system_garage.launch.py  system_indoor.launch  system_matterport.launch  system_real_robot.launch  system_tunnel.launch  system_tunnel.launch.py  vehicle_simulator.launch  vehicle_simulator.launch.py
src/vehicle_simulator/rviz/: 2d.rviz  vehicle_simulator.rviz
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/vehicle_simulator/urdf/: hokuyo.gazebo  laser_2d.urdf.xacro  lidar.urdf.xacro  rgbd_camera.urdf.xacro  robot.sdf  robot.urdf.xacro
src/velodyne_simulator/velodyne_description/launch/: example-launch.py
src/velodyne_simulator/velodyne_description/world/: garage.world
src/visualization_tools/: CMakeLists.txt  package.xml
src/visualization_tools/launch/: visualization_tools.launch
src/visualization_tools/scripts/: realTimePlot.py
src/visualization_tools/src/: visualizationTools.cpp
src/waypoint_example/: CMakeLists.txt  package.xml
src/waypoint_example/launch/: waypoint_example_garage.launch  waypoint_example_matterport.launch
src/waypoint_example/src/: waypointExample.cpp
src/waypoint_rviz_plugin/: CMakeLists.txt  altCMakeLists.txt  oldCMakeLists.xml  package.xml  plugin_description.xml
src/waypoint_rviz_plugin/include/: waypoint_tool.hpp
src/waypoint_rviz_plugin/include/waypoint_rviz_plugin/: waypoint_tool.h
src/waypoint_rviz_plugin/src/: waypoint_tool.cpp
